Algortihm updated and Policy Iteration is done. It has taken about 12 hours to train agent. But results are not optimal as it was. Even it's worse.

--- a/tic-tac-toe-dp/gui/gui.qrc
+++ b/tic-tac-toe-dp/gui/gui.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="icons">
+    <file>tic-tac-toe.png</file>
     <file>o.png</file>
     <file>x.png</file>
   </qresource>
